Optimize unit location updates with polling and Redis pipelining
Replaced WebSocket-based high-frequency unit location updates with a REST polling endpoint and frontend polling loop for improved scalability. Backend now uses Redis pipelining to fetch all unit locations in a single network call, reducing server load. Assignment and incident update broadcasts are now more granular, and redundant frontend fetches are removed to prevent excessive load during large simulations.